add a link to vert.html

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <li><a href="mark.html">mark - Mark Positioning</a></li>
 <li><a href="ccmp.html">ccmp - Glyph Composition/Decomposition</a></li>
 <li><a href="jp04.html">jp04 - JIS 04 Forms</a></li>
+<li><a href="vert.html">vert - Vertical Alternates</a></li>
 </ul>
 <address>
 <a href="https://twitter.com/mandel59">Twitter @mandel59</a>
