support jp04 kiba

--- a/jp04.html
+++ b/jp04.html
@@ -15,6 +15,7 @@
 <div class="black"><mark>芦</mark>田さんは<mark class="jp04">芦</mark>屋のお嬢様だ</div>
 <div class="regular"><mark>芦</mark>田さんは<mark class="jp04">芦</mark>屋のお嬢様だ</div>
 <div class="thin"><mark>芦</mark>田さんは<mark class="jp04">芦</mark>屋のお嬢様だ</div>
+<div><mark>牙</mark> <mark class="jp04">牙</mark></div>
 </div>
 <p lang="ja">FirefoxとChromiumで表示を確認できた。</p>
 <nav><a href="./index.html">index</a></nav>
