--- a/ccmp.html
+++ b/ccmp.html
@@ -15,6 +15,17 @@
 → “<mark class="ccmp" lang="ain">セ&#x309a;ㇷ&#x309a;</mark>”
 </div>
 <p lang="ja">今のところGoogle Chromeだと表示できないみたい。</p>
+<div class="mplus-1p large">
+<mark>芦&#xe0100;</mark>
+<mark>芦&#xe0101;</mark>
+<mark>牙&#xe0100;</mark>
+<mark>牙&#xe0101;</mark>
+</div>
+<div>
+(芦&amp;#xe0100; 芦&amp;#xe0101; 牙&amp;#xe0100; 牙&amp;#xe0101;)
+</div>
+<p lang="ja"><abbr title="Ideographic Variation Sequence" lang="en">IVS</abbr>
+に対応した。</p>
 <nav><a href="./index.html">index</a></nav>
 </body>
 </html>
