--- a/ccmp.html
+++ b/ccmp.html
@@ -14,7 +14,7 @@
 “<span class="no_ccmp">セ&#x309a;ㇷ&#x309a;</span>”
 → “<mark class="ccmp" lang="ain">セ&#x309a;ㇷ&#x309a;</mark>”
 </div>
-<p lang="ja"><del>今のところGoogle Chromeだと表示できないみたい。</del>Mac OS XのGoogle Chromeは対応しているようだ。</p>
+<p lang="ja">Firefoxは表示できる。<del>今のところGoogle Chromeだと表示できないみたい。</del>Mac OS XのGoogle Chromeは対応しているようだ。</p>
 <div class="mplus-1p large">
 <mark>芦&#xe0100;</mark>
 <mark>芦&#xe0101;</mark>
@@ -25,7 +25,7 @@
 (芦&amp;#xe0100; 芦&amp;#xe0101; 牙&amp;#xe0100; 牙&amp;#xe0101;)
 </div>
 <p lang="ja"><abbr title="Ideographic Variation Sequence" lang="en">IVS</abbr>
-に対応した。でもMac OS XのSafariは「落ちる」</p>
+に対応した。こちらもFirefox、Mac OS X版Google Chromeで表示が確認できた。</p>
 <nav><a href="./index.html">index</a></nav>
 </body>
 </html>
