--- a/jp04.html
+++ b/jp04.html
@@ -4,7 +4,6 @@
 <meta charset="UTF-8" />
 <title>M+ Web Fonts Samples / jp04</title>
 <link rel="stylesheet" href="mplus-1p/mplus-1p-black.css" type="text/css" />
-<link rel="stylesheet" href="mplus-1p/mplus-1p-thin.css" type="text/css" />
 <link rel="stylesheet" href="mplus-1p/mplus-1p-regular.css" type="text/css" />
 <link rel="stylesheet" href="mplus-sample.css" type="text/css" />
 </head>
@@ -12,12 +11,12 @@
 <h1><span class="mplus_logo">M<span class="sup_plus">+</span>
 <span class="regular">Web</span> Fonts</span> / jp04</h1>
 <div class="mplus-1p large" lang="ja">
-<div class="black"><mark>芦</mark>田さんは<mark class="jp04">芦</mark>屋のお嬢様だ</div>
 <div class="regular"><mark>芦</mark>田さんは<mark class="jp04">芦</mark>屋のお嬢様だ</div>
-<div class="thin"><mark>芦</mark>田さんは<mark class="jp04">芦</mark>屋のお嬢様だ</div>
-<div><mark>牙</mark> <mark class="jp04">牙</mark></div>
+<div><mark>逢飴溢茨鰯牙</mark> <mark class="jp04">逢飴溢茨鰯牙</mark></div>
 </div>
-<p lang="ja">FirefoxとChromiumで表示を確認できた。</p>
+<p lang="ja">FirefoxとChromiumで表示を確認できた。
+対応状況は<a href="http://caniuse.com/font-feature">
+When can I use Font feature settings?</a>を参照。</p>
 <nav><a href="./index.html">index</a></nav>
 </body>
 </html>
